--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,11 @@
 									<li class="nav-item"><a class="nav-link" href="#confirmation">Confirmation</a></li>
 								</ul>
 							</li>
-							<li class="nav-item"><a class="nav-link" href="#login">Login</a></li>
+							<li class="nav-item"><a id="nav-login" class="nav-link" href="#login">Login</a></li>
+							<li class="nav-item"><a id="nav-dashboard" class="nav-link" href="#dashboard" style="display:none;">Dashboard</a></li>
+							<li class="nav-item"><a id="nav-admin" class="nav-link" href="#admin" style="display:none;">Admin Panel</a></li>
+							<li class="nav-item"><a id="nav-logout" class="nav-link" href="#" style="display:none;">Logout</a></li>
+							<li class="nav-item"><a id="nav-user-label" class="nav-link" href="#" style="display:none; pointer-events:none; opacity:.75;"></a></li>
 							<li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 						</ul>
 						</ul>
@@ -79,7 +83,11 @@
 			</div>
 		</div>
 	</header>
-	<!-- SPA outlet (place this right after </header>) -->
+<div class="container"><div id="app-flash" class="alert" style="display:none; margin-top:15px;"></div></div>
+
+	<!-- SPA outlet (place this right after </header>
+<div class="container"><div id="app-flash" class="alert" style="display:none; margin-top:15px;"></div></div>
+) -->
 <main id="spapp" role="main" class="my-4">
   <section id="home" data-load="home.html"></section>
 
@@ -96,6 +104,8 @@
 
   <!-- Pages -->
   <section id="login" data-load="login.html"></section>
+  <section id="dashboard" data-load="dashboard.html"></section>
+  <section id="admin" data-load="admin.html"></section>
   <section id="tracking" data-load="tracking.html"></section>
   <section id="elements" data-load="elements.html"></section>
   <section id="contact" data-load="contact.html"></section>
@@ -182,6 +192,11 @@
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/jquery.spapp.min.js"></script>
+	<script src="js/app-api.js"></script>
+	<script src="js/app-auth.js"></script>
+	<script src="js/app-ui.js"></script>
+	<script src="js/app-login.js"></script>
+	<script src="js/app-shop.js"></script>
 <script>
 $(function () {
   
@@ -201,6 +216,8 @@ $(function () {
   app.route('blog');
   app.route('single-blog');
   app.route('login');
+  app.route('dashboard');
+  app.route('admin');
   app.route('tracking');
   app.route('elements');
   app.route('contact');
